--- a/sem4/S K K/SKK.tex
+++ b/sem4/S K K/SKK.tex
@@ -6,8 +6,9 @@
 \section{S K K}
 
 S K K = ($\lambda$x y z.x z (y z)) ($\lambda$x y.x) ($\lambda$x y.x)
-$\rightarrow_\beta$ $\lambda$ x.($\lambda$y z.y) x (($\lambda$a b.a) x)
-$\rightarrow_\beta$ $\lambda$x.($\lambda$y.x) ($\lambda$z.x)
-$\rightarrow_\beta$ $\lambda$x.x
+$\rightarrow_\beta$ ($\lambda$y z.($\lambda$x y.x) z (y z)) ($\lambda$x y.x)
+$\rightarrow_\beta$ ($\lambda$y z.($\lambda$y.z) (y z)) ($\lambda$x y.x)
+$\rightarrow_\beta$ ($\lambda$y z.z) ($\lambda$x y.x)
+$\rightarrow_\beta$ $\lambda$z.z = I
 
 \end{document}
